--- a/app/views/history/i_dok.phtml
+++ b/app/views/history/i_dok.phtml
@@ -1,4 +1,4 @@
-<li class="timeline-item right"  data-category="tender" data-type="add">
+<li class="timeline-item right"  data-category="dokumen" data-type="add">
     <div class="timeline-content timeline-type" style="padding: 10px 10px 10px 10px; border-left: 1px solid #4285f4;">
         <div class="timeline-avatar">
             <img src="public/profile/<?= $this->userDetailHelper($history['id_user'])['image'] ?>" alt="Avatar" class="circle">
