--- a/app/views/rks-acara/detail.phtml
+++ b/app/views/rks-acara/detail.phtml
@@ -53,6 +53,14 @@ $this->start('contents');
                         </div>
                     </div>
                     <div class="form-group form-group-sm">
+                        <label class="control-label">Kualifikasi</label>
+                        <div class="well well-sm aside-well">
+                            <?php foreach ($this->autocomplete('kualifikasi', ['id_tender'=>$tender['id_tender']]) as $kualifikasi): ?>
+                                <span class="label label-default"><?= $kualifikasi ?></span>
+                            <?php endforeach; ?>
+                        </div>
+                    </div>
+                    <div class="form-group form-group-sm">
                         <label class="control-label">Link Website</label>
                         <div class="well well-sm aside-well">
                             <a href="<?= $tender['link_website'] ?>" target="_blank">
