--- a/app/views/base.phtml
+++ b/app/views/base.phtml
@@ -8,7 +8,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
         <link rel="shortcut icon" href="public/assets/img/logo-fav.png">
-        <title>E-Admin Tender</title>
+        <title><?= $this->e($active_user_data['nama']); ?> - <?= $this->e($active_user_data['jabatan']); ?> | E-Admin Tender</title>
         <link rel="stylesheet" type="text/css" href="public/assets/lib/perfect-scrollbar/css/perfect-scrollbar.min.css"/>
         <link rel="stylesheet" type="text/css" href="public/assets/lib/material-design-icons/css/material-design-iconic-font.min.css"/>
         <!--[if lt IE 9]>
